replace few imgs with Images

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@
   }
 
   .profile_image {
-    @apply size-[220px] rounded-full object-cover border-[3px] border-black;
+    @apply rounded-full object-cover border-[3px] border-black;
   }
 
   /* idea details */
